# bayes_mcmc

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
tests/: test_bayes_mcmc.py
