[tool.poetry]
name = "bayes_mcmc"
version = "0.1.0"
description = ""
authors = ["rmasutani <masutanirugby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
isort = "^5.8.0"
autoflake = "^1.4"
mock = "^4.0.3"
mypy = "^0.812"
responses = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
